--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: Spedhub # your site title
 author: Serena Cameirano # You :P
 description: > # Meta description of Homepage
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Spedhub is a website focused on Special Education information for parents
+  of special need kids. It helps anonimously share information about school district
+  and their services
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://cameiras.github.io/spedHubMain/" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -33,8 +33,8 @@ hero_img: posts/sleek_lg.jpg # Main background image: use the path from /assets/
 email: cameiras@gmail.com # email for form submission
 
 twitter_username: cameiras # replace with your_twitter_username or comment to remove link from footer
-github_username:  cameiras # replace with your_github_username or comment to remove link from footer
-instagram_username: cameiras # replace with your_instagram_username or comment to remove link from footer
+# github_username:  cameiras # replace with your_github_username or comment to remove link from footer
+# instagram_username: cameiras # replace with your_instagram_username or comment to remove link from footer
 
 disqus:
   shortname: spedHubMain # to enable comments replace with your_disqus_shortname
